[gd_scene load_steps=15 format=3 uid="uid://dym73nwkj4utc"]

[ext_resource type="PackedScene" uid="uid://dreq6g3c0niyr" path="res://models/tank/levels/level_garf_shrine.glb" id="1_80u1u"]
[ext_resource type="Script" path="res://scripts/tanks/level_garf_shrine.gd" id="2_cq6p8"]
[ext_resource type="PackedScene" uid="uid://o1kolv3p78q4" path="res://scenes/tanks/fire_projectile.tscn" id="3_r7260"]
[ext_resource type="AudioStream" uid="uid://b5x2br3fqtyed" path="res://scenes/483450__pappabert__stone-creek.wav" id="4_5qjtp"]
[ext_resource type="AudioStream" uid="uid://dhxj5ju1bdfau" path="res://sounds/SFX/422729__grubzyy__s_spotlight_off.wav" id="5_mgswi"]

[sub_resource type="Animation" id="Animation_0snqd"]
resource_name = "initial"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pillar/StoneScraping:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_tl8cd"]
resource_name = "startup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [14.04]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pillar/StoneScraping:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spotlight")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 1.69,
"start_offset": 0.39,
"stream": ExtResource("5_mgswi")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f422t"]
_data = {
"initial": SubResource("Animation_0snqd"),
"startup": SubResource("Animation_tl8cd")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_klao6"]
height = 0.88
radius = 0.994

[sub_resource type="Gradient" id="Gradient_48ikl"]
colors = PackedColorArray(0, 0, 0, 1, 0.0475682, 0.00981322, 0.168877, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vtgco"]
gradient = SubResource("Gradient_48ikl")
fill_from = Vector2(0.4, 0.1)
fill_to = Vector2(0.5, 0.9)
metadata/_snap_enabled = true

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_ndwpl"]
sun_disk_scale = 21.87
ground_color = Color(0.262745, 0.2, 0.12549, 1)
energy_multiplier = 0.9
night_sky = SubResource("GradientTexture2D_vtgco")

[sub_resource type="Sky" id="Sky_b1ms4"]
sky_material = SubResource("PhysicalSkyMaterial_ndwpl")

[sub_resource type="Environment" id="Environment_vt8g0"]
background_mode = 2
sky = SubResource("Sky_b1ms4")

[node name="level_garf_shrine" groups=["Cavernous"] instance=ExtResource("1_80u1u")]
script = ExtResource("2_cq6p8")
fire_projectile = ExtResource("3_r7260")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="0"]
libraries = {
"": SubResource("AnimationLibrary_f422t")
}

[node name="StoneScraping" type="AudioStreamPlayer3D" parent="Pillar" index="0"]
transform = Transform3D(0.118303, 0, 0, 0, 0.118303, 0, 0, 0, 0.118303, 0, 0.00118115, 0)
stream = ExtResource("4_5qjtp")
volume_db = -80.0

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="Pillar" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar/AnimatableBody3D" index="0"]
shape = SubResource("CylinderShape3D_klao6")

[node name="FireSpawn" type="Node3D" parent="Pillar" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0945664, 1.11086)

[node name="AnimationPlayer" parent="." index="4"]
active = false

[node name="PlayerSpawn1" type="Node3D" parent="." index="5" groups=["PlayerSpawn"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -16.858, 0.186, -16.014)

[node name="PlayerSpawn2" type="Node3D" parent="." index="6" groups=["PlayerSpawn"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16.118, 0.186, 15.4456)

[node name="PlayerSpawn3" type="Node3D" parent="." index="7" groups=["PlayerSpawn"]]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 15.7018, 0.186, -16.858)

[node name="PlayerSpawn4" type="Node3D" parent="." index="8" groups=["PlayerSpawn"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.6423, 0.186, 16.858)

[node name="GPUParticlesCollisionHeightField3D" type="GPUParticlesCollisionHeightField3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152405, 2.0918, 0.0520935)
size = Vector3(64.3553, 6.18359, 62.3082)

[node name="Spotlight" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource("5_mgswi")
volume_db = -5.0

[node name="SpotLight3D" type="SpotLight3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 21.9183, 0)
light_color = Color(0.258824, 0.25098, 0.454902, 1)
light_energy = 15.512
spot_range = 42.0
spot_attenuation = 0.420448
spot_angle = 51.98

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="12"]
environment = SubResource("Environment_vt8g0")

[node name="ActivationTimer" type="Timer" parent="." index="13"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="OmniLight3D" type="OmniLight3D" parent="." index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 5.49533)
light_color = Color(0.862745, 0.411765, 0.152941, 1)
light_energy = 0.0
light_size = 0.055
omni_range = 34.598
omni_attenuation = 0.225313

[node name="SpinnyNode" type="Node3D" parent="." index="15"]

[node name="Camera3D" type="Camera3D" parent="SpinnyNode" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.987688, -0.156434, 0, 0.156434, 0.987688, 0, 5.79, 17.98)

[connection signal="finished" from="Pillar/StoneScraping" to="." method="_on_stone_scraping_finished"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_activation_timer_timeout"]
